public interface AuthServicePort {
    String authenticate(String username, String password);
}